--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -6,10 +6,19 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="Számlázás">
+<Layout lang="en" title="Üzemeltetés">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Számlázás</h1>
+		<div class="py-20 px-10 md:px-0">
+			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Számlázás</h1>
+			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">ERPNext magyar számlázás hamarosan - 2023 Q3</p>
+			<div>
+				<p class=" text-xl py-10 text-[#1F2634]">A magyar szabályoknak megfelelő számla kiállítását az ERPNext rendszerből hamarosan elérhetővé tesszük.			</p>
+				<img src="/IyzD8FB.png" alt="" />
+			</div>
+			<div>
+				<p class=" text-xl py-10 text-[#1F2634]">Ráadásul nem csak hagyományos számlázóként, hanem pénztárgépként is használható lesz az ERPNext.				</p>
+				<img src="/S1Fzpjh.png" alt="" />
+			</div>
 		</div>
 	</Container>
 </Layout>
