--- a/src/pages/knowledge.astro
+++ b/src/pages/knowledge.astro
@@ -45,7 +45,7 @@ const page = localizedPosts.filter(post=>post.data.category.includes('how-to'))
 ---
 
 
-<Layout title="Blog" lang="en">
+<Layout title="Knowledge" lang="en">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">ERPNext and Frappe Knowledgebase</Fragment>
