--- a/src/pages/monolithon.astro
+++ b/src/pages/monolithon.astro
@@ -6,10 +6,63 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="en" title="Monolithon">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Monolithon</h1>
+		<div class="">
+			<div class="flex flex-col h-full justify-center py-36">
+				<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">ERPNext Hungarian Accounting</h1>
+			</div>
+			<div class=" flex flex-col gap-4">
+				<h1 class="text-[25px] md:text-[35px] pb-16 leading-none font-semibold text-[#192734]">Discovering ERPNext</h1>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2023</span>
+					<p class="text-gray-700">First release of our own comprehensive ERPNext app</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2022</span>
+					<p class="text-gray-700">Migration to Frappe Cloud ERPNext and update to version 14.0</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2021</span>
+					<p class="text-gray-700">Upgrade to ERPNext 13.0 developer edition</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2020</span>
+					<p class="text-gray-700">Migration to ERPNext</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2019</span>
+					<p class="text-gray-700">Testing ERPNext - ready for live usage and recommendation</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2018</span>
+					<p class="text-gray-700">Testing ERPNext - almost complete</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2017</span>
+					<p class="text-gray-700">Testing ERPNext - eagerly awaited developments released</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2016</span>
+					<p class="text-gray-700">Testing ERPNext - steadily improving</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2015</span>
+					<p class="text-gray-700">Testing ERPNext - getting better</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2014</span>
+					<p class="text-gray-700">Testing ERPNext - shaping up</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2013</span>
+					<p class="text-gray-700">First ERPNext installation (version 3.0)</p>
+				</div>
+				<div class="flex gap-20 text-lg">
+					<span class="font-medium">2010</span>
+					<p class="text-gray-700">First encounter with ERPNext version 1.0</p>
+				</div>
+			</div>
 		</div>
 	</Container>
 </Layout>
