--- a/src/pages/hu/konyveles.astro
+++ b/src/pages/hu/konyveles.astro
@@ -2,14 +2,177 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="Könyvelés">
+<Layout lang="hu" title="Könyvelést">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Könyvelés</h1>
+		<div class="px-5 py-15">
+			<div class="md:flex justify-between items-center gap-10">
+				<div class="flex flex-col h-full justify-center flex-2">
+					<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">ERPNext magyar könyvelés</h1>
+					<p class="text-gray-400 text-xl my-5">Könyvelést támogató megoldások</p>
+				</div>
+				<div class="flex-1 py-32">
+					<img class="w-full" src="../../../public/erpnextImage.png" alt="" />
+				</div>
+			</div>
+			<div class="flex flex-col items-center">
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">“Könyvelni kockás papíron is lehet.”</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+						Tartja az ismeretlen könyvelőtől származó “ősi” közmondás. De ennek ellenére ma már szinten mindenki (általában) valamilyen
+						kettős könyvviteli, könyvelő programmal könyveli a gazdasági eseményeket. De a vicces megjegyzés nagyon jól rávilágít arra a
+						lényeges pontra, hogy nincsen könyvelőprogramokra vonatkozó előírás, hanem a különböző, pl számviteli rendet érintő
+						jogszabályokból lehet csupán azt kiolvasni, hogy magának a könyvelésnek milyen szabályok mentén kell megtörténnie.
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Akkor miért használnak a könyvelők valamilyen könyvelési programot?</h2>
+					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+						A könyvelő programok rengeteg dolgot automatizálnak és leegyszerűsítenek, ezért szeretik a könyvelők a saját könyvelő
+						programukat használni. Jóval kevesebb manuális munkát kell elvégezniük a könyvelőknek és az automatizációknak köszönhetően az
+						adatrögzítésből adódó esetleges pontatlanságokat is minimalizálhatják.
+					</p>
+					<p class="list-disc text-[17px] leading-7 py-10 text-[#192734]">
+						A másik fontos szempont, hogy nem csupán a gazdasági események rögzítése egyszerűsödik a könyvelő programoknak és azok
+						automatizmusainak köszönhetően, hanem az állam részére elkészítendő bevallások előállítását is nagyban megkönnyítik. Nem
+						titok, hogy a legtöbb könyvelő program a havi áfabevallásokat az ÁNYK formátumában szinte gombnyomásra el tudja készíteni.
+						(Igaz, több kevesebb sikerrel, mert rengeteg speciális eset van amelyeket csak a megfelelően rögzített bizonylatok esetén fog
+						jól használni a rendszer, azaz könyvelői tudásra szükség van abban a tekinteten is, hogy a speciális esetek bizonylatait akár
+						kézzel felülvizsgálva, szükség esetén javítva könyveljék, hogy utána a bevalláskészítés már lehetőleg hibamentes legyen,
+						függetlenül a használt programtól).
+					</p>
+					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+						A havi bevallás mellett az éves beszámoló készítésben is nagy segítséget nyújtanak a könyvelő programok, de az az érdekesség,
+						hogy ez a funkció sincs minden könyvelő programban megfelelően elkészítve. Ezért is van a piacon több beszámoló készítő
+						megoldás, amit párban szoktak a kettős könyvviteli rendszerrel használni a könyvelők.
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Miért érdekes ez az ERPNext szempontjából?</h2>
+					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+						A fentiekből látszik, hogy egyrészt kényelmi, másrészt sebesség, harmadrész pontosság miatt választják a könyvelők a saját
+						könyvelő programjuk használatát, hiszen a kézi könyveléstől ma már elszoktak és viszonylag kevesek azok, akik tudják, hogy mi
+						történik a “motorháztető” alatt és képesek lennének paraméterezni, vagy akár ellenőrizni könyvelőprogramunk működését.
+					</p>
+					<p class="list-disc text-[17px] leading-7 py-10 text-[#192734]">
+						Ebből következik, hogy az ilyen típusú könyvelők, akik már nem valószínű, hogy képesek lennének kockás papíron könyvelni, más
+						rendszerekben való könyvelést nem akarják és nem is tudják megoldani, vagy jellemzően értelmezhetetlen extra díjat kérnének
+						érte, pedig valójában az ő munkájuk csökkenne, tehát kedvezményre lennénk jogosultak.
+					</p>
+					<p class="list-disc text-[17px] leading-7 text-[#192734]">
+						Ott van azonban a szakma azon része, akiknek teljesen mindegy, hogy milyen program elé kerülnek, mert magasabb tudással, más
+						szempontból tekintenek a könyvelésre. Ők a saját munkájuk könnyítése érdekében további automatizációkat és paraméterezéseket
+						is képesek elvégezni a programok mélyebb szintű ismerete nélkül.
+					</p>
+				</section>
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Hogyan használható az ERPNext magyar könyvelésre?</h2>
+					<p class="list-disc text-[17px] leading-7 pb-10 text-[#192734]">
+						A fentiekből következik, hogy több út is van az ERPNext magyar használatára. ERP rendszerek használata esetén az alábbi
+						megoldásokkal szoktunk találkozni:
+					</p>
+					<ul class="list-decimal ml-10 space-y-5 text-[#192734]">
+						<li>
+							Kettős könyvelés. De nem abban az értelemben. Hívjuk inkább párhuzamos könyvelésnek. Ilyenkor hiába vannak a gazdasági
+							események, akár automatikusan könyvelvei az ERPNext rendszerben, például egy adminisztrátor által, a hivatalos könyvelő
+							nem nyúl a rendszerhez, esetleg jobb esetben onnan vesz át adatokat a sajátjába. De a lényeg, hogy mindent ő is lekönyvel
+							a saját rendszerébe. Nem kell mondanunk, hogy ez milyen kontraproduktív. Főleg annak ismeretében, hogy például a beszámoló
+							készítéshez még egy harmadik programot fog használni.
+						</li>
+						<li>
+							A másik út, hogy minden tranzakció az ERPNextbe kerül könyvelésre, akár automatikusan, és a könyvelő is ide könyvel,
+							illetve ellenőrzi és jóváhagyja a nem általa könyvelt tételeket. Továbbá az ERPNext-ből kerülnek elállításra azok a nyers
+							adatok, amelyek alapján az állam számára a bevallásokat elő lehet állítani, azaz az ANYK-ban a megfelelő bevallásokat
+							kézzel tölti ki a könyvelő.
+						</li>
+						<li>
+							Cégmérettől, cégformától, a cégre vonatkozó előírásoktól függően dől el, hogy milyen bevallásokra van szükség, így az is
+							előfordulhat, hogy az ERPNext képes lehet az adóhatóság számára szükséges bevallás elkészítésére, bár az ANYK formátumban
+							történő exportálás az bizonyára egyedi fejlesztést jelent. De idővel akár az összes bevallás elkészíthető lehet az
+							ERPNext-ből.
+						</li>
+						<li>
+							A fentiek ismeretében nekünk a legoptimálisabb megoldásnak azonban az az út tűnik, amikor a könyvelés az ERPNext-ben
+							történik. Mivel akkor is lehet külső szoftver használatára szükség ha a könyvelő csak a saját szoftverét használja, vagy
+							párhuzamosan könyvel a saját szoftverébe, így az ERPNext mellett a bevallásokat és beszámolót az ERPNext exportját
+							feldolgozni képes külső szoftverrel történő elkészítése az ajánlott.
+						</li>
+					</ul>
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Mik az előnyei az ERPNext-ben való könyvelésnek?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+						Single source of truth - azaz mindenki ugyan onnan tájékozódik, mindenki ugyan azt látja. (persze a megfelelő jogosultsággal).
+						Egy felületet kell csak megtanulni, ami az ERPNext esetében elég intuitív. Nincs dupla munka, a legtöbb dolog automatizálható,
+						hiszen például a kimenő számláink automatikusan könyvelésre kerülnek. Ahogy a bejövő számláinkat is elsősorban az ERPNext-nek
+						kell kezelnie, hiszen akkor látjuk azok fizetési státuszát például. Amit akár bankszinkronizációval is egyszerűsíthetünk.
+					</p>
+				</section>
+
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Oké, de hogyan készülnek akkor a bevallások és a beszámoló?</h2>
+					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
+						A magyar ERPNext és Frappe közösség folyamatosan dolgozik az ERPNext lokalizálásán, így idővel a legideálisabb 3. pontban
+						említett megoldás elérésére törekszünk, de addig is az ERPNext könyvelésre történő használata a külső Excel alapú bevallás és
+						beszámoló készítő szoftverekkel a legideálisabb. Amelyeken kívül további magyar könyveléshez kapcsolódó, könyvelési feladatot
+						egyszerűsítő Excel szoftverek érhetőek el, amelyekbe az adatokat az ERPNext szolgáltatja.
+					</p>
+				</section>
+			</div>
+			<section class="pb-10 pt-20 px-4">
+				<h2 class="font-bold text-3xl mb-10 text-[#192734]">ERPNext magyar könyvelést támogató Excel szoftverek</h2>
+				<div class="md:flex gap-10">
+					<a
+						class="w-[15vw] cursor-pointer"
+						href="https://www.monolithon.com/szoftverlicenc/excel/komplett-%C3%A1fa-bevall%C3%A1s-2365-m-lapokkal-aeai9">
+						<div>
+							<div>
+								<img src="/excel1.png" alt="" />
+							</div>
+							<div class="text-center text-sm py-3">
+								<h4>Komplett ÁFA BEVALLÁS - 2365 M lapokkal</h4>
+								<span class="pt-2 inline-block text-gray-600">Excel</span>
+							</div>
+						</div>
+					</a>
+					<a
+						class="w-[15vw] cursor-pointer"
+						href="https://www.monolithon.com/szoftverlicenc/excel/a60-k%C3%B6z%C3%B6ss%C3%A9gi-nyilatkozat-23a60-lem67">
+						<div>
+							<div>
+								<img src="/excel2.png" alt="" />
+							</div>
+							<div class="text-center text-sm py-3">
+								<h4>A60 KÖZÖSSÉGI NYILATKOZAT - 23A60</h4>
+								<span class="pt-2 inline-block text-gray-600">Excel</span>
+							</div>
+						</div>
+					</a>
+					<a
+						class="w-[15vw] cursor-pointer"
+						href="https://www.monolithon.com/szoftverlicenc/excel/komplett-besz%C3%A1mol%C3%B3-k%C3%A9sz%C3%ADt%C5%91-kieg%C3%A9sz%C3%ADt%C5%91-mell%C3%A9klettel-cfp8x">
+						<div>
+							<div>
+								<img src="/excel3.png" alt="" />
+							</div>
+							<div class="text-center text-sm py-3">
+								<h4>Komplett BESZÁMOLÓ készítő, kiegészítő melléklette</h4>
+								<span class="pt-2 inline-block text-gray-600">Excel</span>
+							</div>
+						</div>
+					</a>
+				</div>
+			</section>
+			<section class="py-8 items-center px-4 bg-[#EEF0F2] rounded-xl flex justify-between w-full">
+				<div>
+					<h2 class="my-3 text-[30px] text-[#192734] font-bold">További kérdései vannak?</h2>
+					<span class="text-[#192734]">ERPNext könyvelés magyarul</span>
+				</div>
+				<a href="/contact" class="cursor-pointer text-2xl font-semibold text-gray-700">Beszéljünk! ></a>
+			</section>
 		</div>
 	</Container>
 </Layout>
