--- a/src/pages/hu/uzemeltetes.astro
+++ b/src/pages/hu/uzemeltetes.astro
@@ -8,8 +8,25 @@ changeLanguage("hu");
 
 <Layout lang="en" title="Üzemeltetés">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Üzemeltetés</h1>
+		<div class="py-20">
+			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Üzemeltetés</h1>
+			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">ERPNext üzemeltetése a felhőben</p>
+			<div>
+				<img src="/frappecloud-banner.jpg" alt="" />
+			</div>
+			<div>
+				<p class="text-lg mt-20 text-[#1F2634]">
+					Az ERPNext üzemeltetése szakértelem mellett speciális technikai feltételeket is megkíván. Több éves ERPNext használat alatt sok
+					partnerrel való együttműködés után megtaláltuk azt az ERPNext partnert, akit szívesen ajánlunk. Az ERPNext osztott tárhelyen nem
+					üzemeltethető, a menedzselt VPS és szerver szolgáltatások pedig jellemzően magasabb árkategóriába tartoznak. Ezért örömmel
+					mutatjuk be az ERPNext felhőszolgáltatót, amelyen a monolithon.com, a magyar ERPNext népszerűsítő oldal is fut.
+					<span class=" inline-block  py-10">
+						Az ERPNext fejlesztői által fejlesztett, üzemeltetett és optimalizált platform a Frappe Cloud szerintünk a legjobb ERPNext
+						hoszting szolgáltató, ezért ajánljuk és használjuk:
+					</span>
+					Részletek és regisztráció: <a href="https://frappecloud.com/" target="_blank" class=" text-[#50A6F2]">https://frappecloud.com</a>
+				</p>
+			</div>
 		</div>
 	</Container>
 </Layout>
