--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -6,10 +6,27 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="en" title="Implementation">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Implementation</h1>
+		<div class="py-20">
+			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Operations</h1>
+			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">Operating ERPNext in the Cloud</p>
+			<div>
+				<img src="/frappecloud-banner.jpg" alt="" />
+			</div>
+			<div>
+				<p class="text-lg mt-20 text-[#1F2634]">
+					Operating ERPNext requires expertise and specific technical conditions. After years of collaboration with various partners,
+					we have found an ERPNext provider we happily recommend. ERPNext cannot be hosted on shared hosting, and managed VPS and server
+					services usually belong to higher price categories. Therefore, we are pleased to introduce the ERPNext cloud service, where
+					monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
+					<span class="inline-block py-10">
+						The Frappe Cloud, developed, operated, and optimized by ERPNext developers, is, in our opinion, the best ERPNext hosting
+						service, and that's why we recommend and use it:
+					</span>
+					Details and registration: <a href="https://frappecloud.com/" target="_blank" class="text-[#50A6F2]">https://frappecloud.com</a>
+				</p>
+			</div>
 		</div>
 	</Container>
 </Layout>
