--- a/src/pages/partners.astro
+++ b/src/pages/partners.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("en");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="en" title="Partners">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
 			<h1 class=" text-3xl">Partners</h1>
