Hide the softwares and partners

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -19,10 +19,10 @@ export const menuitems = [
 		title: "footer.monolithon",
 		path: "path_footer.monolithon",
 	},
-	{
-		title: "footer.softwares",
-		path: "path_footer.softwares",
-	},
+	// {
+	// 	title: "footer.softwares",
+	// 	path: "path_footer.softwares",
+	// },
 
 	{
 		title: "footer.support",
@@ -32,10 +32,10 @@ export const menuitems = [
 		title: "footer.knowledge",
 		path: "path_footer.knowledge",
 	},
-	{
-		title: "footer.partners",
-		path: "path_footer.partners",
-	},
+	// {
+	// 	title: "footer.partners",
+	// 	path: "path_footer.partners",
+	// },
 	{
 		title: "footer.legal",
 		path: "path_footer.legal",
