Create new route status\státusz

--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -37,6 +37,10 @@ export const menuitems = [
 	// 	path: "path_footer.partners",
 	// },
 	{
+		title: "footer.status",
+		path: "path_footer.status",
+	},
+	{
 		title: "footer.legal",
 		path: "path_footer.legal",
 	},
