--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -123,10 +123,12 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 		"inventory-valuation-in-erpnext-system":"készletértékelésről-röviden-az-erpnext-rendszerben",
 		"készletértékelésről-röviden-az-erpnext-rendszerben":"inventory-valuation-in-erpnext-system",
 		"correcting-warehouse-stock-and-product-valuation-in-erpnext":"raktárkészlet-és-termékérték-javítása",
-		"raktárkészlet-és-termékérték-javítása":"correcting-warehouse-stock-and-product-valuation-in-erpnext",
+		"raktárkészlet-és-termékérték-javítása":"correcting-warehouse-stock-and-product-valuation-in-erpnext"
 	}	
 
 	const links = {
+		statusz:"status",
+		status:"statusz", 
 		implementation: "uzemeltetes",
 		invoicing: "szamlazas",
 		accounting: "konyveles",
