--- a/src/pages/hu/monolithon.astro
+++ b/src/pages/hu/monolithon.astro
@@ -10,7 +10,7 @@ changeLanguage("hu");
 	<Container>
 		<div class="">
 			<div class="flex flex-col h-full justify-center py-36">
-				<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">ERPNext Hungarian Accounting</h1>
+				<h1 class="text-[40px] md:text-[50px] leading-none font-semibold text-[#192734]">Monolithon idővonal</h1>
 			</div>
 			<div class=" flex flex-col gap-4">
 				<h1 class="text-[25px] md:text-[35px] pb-16 leading-none font-semibold text-[#192734]">ERPNext felfedezése</h1>
