--- a/src/pages/erpnext.astro
+++ b/src/pages/erpnext.astro
@@ -11,10 +11,10 @@ changeLanguage("en");
 		<div class="px-5">
 			<div class="flex justify-between items-center h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">Monolithon is the sure foundation.</h1>
+					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">Monolithon is the solid foundation.</h1>
 					<h2 class="text-xl text-gray-500 my-4">ERPNext and Frappe in English.</h2>
 					<a href="/contact">
-						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-28 h-12 text-xl">Talk!</button>
+						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-28 h-12 text-xl">Let's talk!</button>
 					</a>
 				</div>
 				<div>
@@ -63,7 +63,7 @@ changeLanguage("en");
 				<h2 class="my-3 text-[30px] text-[#192734] font-bold">You don't need more business management software.</h2>
 				<span class="text-[#192734]">ERPNext is the solid foundation.</span>
 			</div>
-			<a href="/contact" class=" cursor-pointer text-2xl font-semibold text-gray-700" >Talk! > </a>
+			<a href="/contact" class=" cursor-pointer text-2xl font-semibold text-gray-700" >Let's talk! > </a>
 		</section>
 	</Container>
 </Layout>
