--- a/src/components/container.astro
+++ b/src/components/container.astro
@@ -2,6 +2,6 @@
 const { class: className } = Astro.props;
 ---
 
-<div class:list={["max-w-screen-xl px-5 bg-red-300 mx-auto", className]}>
+<div class:list={["max-w-screen-xl px-5  mx-auto", className]}>
 	<slot />
 </div>
