--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -10,13 +10,13 @@ changeLanguage("en");
 	<Container>
 		<div class="py-20">
 			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Operations</h1>
-			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">Operating ERPNext in the Cloud</p>
+			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">ERPNext hosting in the Cloud</p>
 			<div>
 				<img src="/frappecloud-banner.jpg" alt="" />
 			</div>
 			<div>
 				<p class="text-lg mt-20 text-[#1F2634]">
-					Operating ERPNext requires expertise and specific technical conditions. After years of collaboration with various partners,
+					ERPNext hosting requires expertise and specific technical conditions. After years of collaboration with various partners,
 					we have found an ERPNext provider we happily recommend. ERPNext cannot be hosted on shared hosting, and managed VPS and server
 					services usually belong to higher price categories. Therefore, we are pleased to introduce the ERPNext cloud service, where
 					monolithon.com, the popular Hungarian ERPNext promotion site, is also hosted.
