[FIX] fix content

--- a/src/pages/implementation.astro
+++ b/src/pages/implementation.astro
@@ -9,7 +9,7 @@ changeLanguage("en");
 <Layout lang="en" title="Implementation">
 	<Container>
 		<div class="py-20">
-			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">Operations</h1>
+			<h1 class="md:text-[60px] mb-10 text-4xl font-semibold text-[#1F2634]">ERPNext & Frappe Hosting</h1>
 			<p class="md:text-[40px] text-2xl font-semibold text-[#1F2634]">ERPNext hosting in the Cloud</p>
 			<div>
 				<img src="/frappecloud-banner.jpg" alt="" />
