[DEL] remove products from accounting page

--- a/src/pages/accounting.astro
+++ b/src/pages/accounting.astro
@@ -19,7 +19,7 @@ changeLanguage("en");
 			</div>
 			<div class="flex flex-col items-center">
 				<section class="py-8 px-4 md:w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">"You can do accounting on graph paper."</h2>
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">"You can do accounting on a piece of paper."</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
 						This is a saying from an unknown accountant. But despite that, almost everyone (usually) uses some kind of double-entry accounting or accounting program to handle financial events. However, this humorous remark points out the essential point that there are no specific requirements for accounting programs; one can only infer from various regulations related to accounting principles how accounting should be done.
 					</p>
@@ -80,44 +80,6 @@ changeLanguage("en");
 					</p>
 				</section>
 			</div>
-			<section class="pb-10 pt-20 px-4">
-				<h2 class="font-bold text-3xl mb-10 text-[#192734]">Excel Software Supporting Hungarian Accounting in ERPNext</h2>
-				<div class="md:flex gap-10">
-					<a href="https://www.monolithon.com/szoftverlicenc/excel/komplett-%C3%A1fa-bevall%C3%A1s-2365-m-lapokkal-aeai9" class="w-[15vw] cursor-pointer">
-						<div>
-							<div>
-								<img src="/excel1.png" alt="" />
-							</div>
-							<div class="text-center text-sm py-3">
-								<h4>Complete VAT Declaration - 2365 M sheets</h4>
-								<span class="pt-2 inline-block text-gray-600">Excel</span>
-							</div>
-						</div>
-					</a>
-					<a href="https://www.monolithon.com/szoftverlicenc/excel/a60-k%C3%B6z%C3%B6ss%C3%A9gi-nyilatkozat-23a60-lem67" class="w-[15vw] cursor-pointer">
-						<div>
-							<div>
-								<img src="/excel2.png" alt="" />
-							</div>
-							<div class="text-center text-sm py-3">
-								<h4>A60 COMMUNITY DECLARATION - 23A60</h4>
-								<span class="pt-2 inline-block text-gray-600">Excel</span>
-							</div>
-						</div>
-					</a>
-					<a href="https://www.monolithon.com/szoftverlicenc/excel/komplett-besz%C3%A1mol%C3%B3-k%C3%A9sz%C3%ADt%C5%91-kieg%C3%A9sz%C3%ADt%C5%91-mell%C3%A9klettel-cfp8x" class="w-[15vw] cursor-pointer">
-						<div>
-							<div>
-								<img src="/excel3.png" alt="" />
-							</div>
-							<div class="text-center text-sm py-3">
-								<h4>Complete REPORT CREATOR with Supplement</h4>
-								<span class="pt-2 inline-block text-gray-600">Excel</span>
-							</div>
-						</div>
-					</a>
-				</div>
-			</section>
 			<section class="py-8 items-center px-4 bg-[#EEF0F2] rounded-xl flex justify-between w-full">
 				<div>
 					<h2 class="my-3 text-[30px] text-[#192734] font-bold">Do you have more questions?</h2>
