--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,7 +17,6 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site).toString();
 const resolvedImageWithDomain = new URL("/meta/opengraph.png", Astro.site).toString();
 
 // replaced dynamically
-const buildDate = __DATE__;
 
 const { title, lang = null } = Astro.props;
 
@@ -54,8 +53,8 @@ const makeTitle = title ? title + " | " + "Monolithon" : "Monolithon - ERPNext s
 			}}
 		/>
 
-		{pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />}
-		<script src="/src/pwa.ts"></script>
+		<!-- {pwaInfo && <Fragment set:html={pwaInfo.webManifest.linkTag} />} -->
+		<!-- <script defer src="/src/pwa.ts"></script> -->
 	</head>
 	<Cookie/>
 	<body class="dark:bg-stone-950">
