--- a/src/pages/blog/hirek/[blog]/index.astro
+++ b/src/pages/blog/hirek/[blog]/index.astro
@@ -23,8 +23,12 @@ export async function getStaticPaths() {
 	}));
 }
 const { title } = Astro.props;
+// return Astro.redirect(`/hu/${title}`)
 ---
 <Layout title="301" lang="hu">
+	<head>
+		<meta http-equiv="refresh" content={ `0; url=/hu/${ title }` } />
+	</head>
 	<section class="flex items-center h-full p-16">
 		<div class="container flex flex-col items-center justify-center px-5 mx-auto my-8">
 		  <div class="max-w-md text-center">
