--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -3,7 +3,6 @@ import i18next, { changeLanguage } from "i18next";
 import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
-import { Icon } from "astro-icon";
 import { localizePath } from "astro-i18next";
 import { getArticleReadingTime } from "@utils/blog";
 
@@ -76,7 +75,7 @@ const readTime = getArticleReadingTime(entry?.body);
 		<div class="mx-auto mt-20">
 			<a href={localizePath(`/category/${entry?.data.category[0].toLowerCase()}`)}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
-					<Icon name="tabler:chevron-left" class="w-6 h-6" />
+					<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 12 12"><g transform="rotate(180 6 6)"><path fill="#50A6F2" d="M4.7 10c-.2 0-.4-.1-.5-.2c-.3-.3-.3-.8 0-1.1L6.9 6L4.2 3.3c-.3-.3-.3-.8 0-1.1c.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z" /></g></svg>
 					<p class="ml-2">Vissza a kategóriához</p>
 				</div>
 			</a>
