add contact form and track cookie

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -30,6 +30,8 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 		"how-to":"telepítés-és-beállítás",
 	};
 	const blog = {
+		"kapcsolat":"contact",
+		"contact":"kapcsolat",
 		hír: "news",
 		news: "hír",
 		"new-print-designing-app-from-frappe-to-erpnext":"új-nyomtatási-nézet-szerkesztő-app-a-frappe-től-az-erpnext-hez",
