--- a/src/pages/hu/kapcsolat.astro
+++ b/src/pages/hu/kapcsolat.astro
@@ -4,10 +4,10 @@ import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 
-changeLanguage("en");
+changeLanguage("hu");
 ---
 
-<Layout title="Contact" lang="en">
+<Layout title="Contact" lang="hu">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Contact</Fragment>
