--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -14,252 +14,82 @@ changeLanguage("en");
 			<Fragment slot="desc">Get in Touch.</Fragment>
 		</Sectionhead>
 		<style type="text/css" scoped>
-			.mauticform_wrapper {
-				max-width: 600px;
-				margin: 10px auto;
-			}
-			.mauticform-innerform {
-			}
-			.mauticform-post-success {
-			}
-			.mauticform-name {
-				font-weight: bold;
-				font-size: 1.5em;
-				margin-bottom: 3px;
-			}
-			.mauticform-description {
-				margin-top: 2px;
-				margin-bottom: 10px;
-			}
-			.mauticform-error {
-				margin-bottom: 10px;
-				color: red;
-			}
-			.mauticform-message {
-				margin-bottom: 10px;
-				color: green;
-			}
-			.mauticform-row {
-				display: block;
-				margin-bottom: 20px;
-			}
-			.mauticform-label {
-				font-size: 1.1em;
-				display: block;
-				font-weight: bold;
-				margin-bottom: 5px;
-			}
-			.mauticform-row.mauticform-required .mauticform-label:after {
-				color: #e32;
-				content: " *";
-				display: inline;
-			}
-			.mauticform-helpmessage {
-				display: block;
-				font-size: 0.9em;
-				margin-bottom: 3px;
-			}
-			.mauticform-errormsg {
-				display: block;
-				color: red;
-				margin-top: 2px;
-			}
-			.mauticform-selectbox,
-			.mauticform-input,
-			.mauticform-textarea {
-				width: 100%;
-				padding: 0.5em 0.5em;
-				border: 1px solid #ccc;
-				background: #fff;
-				box-shadow: 0px 0px 0px #fff inset;
-				border-radius: 4px;
-				box-sizing: border-box;
-			}
-			.mauticform-checkboxgrp-row {
-			}
-			.mauticform-checkboxgrp-label {
-				font-weight: normal;
-			}
-			.mauticform-checkboxgrp-checkbox {
-			}
-			.mauticform-radiogrp-row {
-			}
-			.mauticform-radiogrp-label {
-				font-weight: normal;
-			}
-			.mauticform-radiogrp-radio {
-			}
-			.mauticform-button-wrapper .mauticform-button.btn-default,
-			.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default {
-				color: #5d6c7c;
-				background-color: #ffffff;
-				border-color: #dddddd;
-			}
-			.mauticform-button-wrapper .mauticform-button,
-			.mauticform-pagebreak-wrapper .mauticform-pagebreak {
-				display: inline-block;
-				margin-bottom: 0;
-				font-weight: 600;
-				text-align: center;
-				vertical-align: middle;
-				cursor: pointer;
-				background-image: none;
-				border: 1px solid transparent;
-				white-space: nowrap;
-				padding: 6px 12px;
-				font-size: 13px;
-				line-height: 1.3856;
-				border-radius: 3px;
-				-webkit-user-select: none;
-				-moz-user-select: none;
-				-ms-user-select: none;
-				user-select: none;
-			}
-			.mauticform-button-wrapper .mauticform-button.btn-default[disabled],
-			.mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] {
-				background-color: #ffffff;
-				border-color: #dddddd;
-				opacity: 0.75;
-				cursor: not-allowed;
-			}
-			.mauticform-pagebreak-wrapper .mauticform-button-wrapper {
-				display: inline;
-			}
+			.mauticform_wrapper { max-width: 600px; margin: 10px auto; }
+			.mauticform-innerform {}
+			.mauticform-post-success {}
+			.mauticform-name { font-weight: bold; font-size: 1.5em; margin-bottom: 3px; }
+			.mauticform-description { margin-top: 2px; margin-bottom: 10px; }
+			.mauticform-error { margin-bottom: 10px; color: red; }
+			.mauticform-message { margin-bottom: 10px;color: green; }
+			.mauticform-row { display: block; margin-bottom: 20px; }
+			.mauticform-label { font-size: 1.1em; display: block; font-weight: bold; margin-bottom: 5px; }
+			.mauticform-row.mauticform-required .mauticform-label:after { color: #e32; content: " *"; display: inline; }
+			.mauticform-helpmessage { display: block; font-size: 0.9em; margin-bottom: 3px; }
+			.mauticform-errormsg { display: block; color: red; margin-top: 2px; }
+			.mauticform-selectbox, .mauticform-input, .mauticform-textarea { width: 100%; padding: 0.5em 0.5em; border: 1px solid #CCC; background: #fff; box-shadow: 0px 0px 0px #fff inset; border-radius: 4px; box-sizing: border-box; }
+			.mauticform-checkboxgrp-row {}
+			.mauticform-checkboxgrp-label { font-weight: normal; }
+			.mauticform-checkboxgrp-checkbox {}
+			.mauticform-radiogrp-row {}
+			.mauticform-radiogrp-label { font-weight: normal; }
+			.mauticform-radiogrp-radio {}
+			.mauticform-button-wrapper .mauticform-button.btn-default, .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default { color: #5d6c7c;background-color: #ffffff;border-color: #dddddd;}
+			.mauticform-button-wrapper .mauticform-button, .mauticform-pagebreak-wrapper .mauticform-pagebreak { display: inline-block;margin-bottom: 0;font-weight: 600;text-align: center;vertical-align: middle;cursor: pointer;background-image: none;border: 1px solid transparent;white-space: nowrap;padding: 6px 12px;font-size: 13px;line-height: 1.3856;border-radius: 3px;-webkit-user-select: none;-moz-user-select: none;-ms-user-select: none;user-select: none;}
+			.mauticform-button-wrapper .mauticform-button.btn-default[disabled], .mauticform-pagebreak-wrapper .mauticform-pagebreak.btn-default[disabled] { background-color: #ffffff; border-color: #dddddd; opacity: 0.75; cursor: not-allowed; }
+			.mauticform-pagebreak-wrapper .mauticform-button-wrapper {  display: inline; }
 		</style><style type="text/css" scoped>
-			.mauticform-field-hidden {
-				display: none;
-			}
+			.mauticform-field-hidden { display:none }
 		</style>
-
+		
 		<div id="mauticform_wrapper_contactform" class="mauticform_wrapper">
-			<form
-				autocomplete="false"
-				role="form"
-				method="post"
-				action="http://asset.monolithon.com/form/submit?formId=1"
-				id="mauticform_contactform"
-				data-mautic-form="contactform"
-				enctype="multipart/form-data">
+			<form autocomplete="false" role="form" method="post" action="http://asset.monolithon.com/form/submit?formId=1" id="mauticform_contactform" data-mautic-form="contactform" enctype="multipart/form-data">
 				<div class="mauticform-error" id="mauticform_contactform_error"></div>
 				<div class="mauticform-message" id="mauticform_contactform_message"></div>
 				<div class="mauticform-innerform">
-					<div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
-						<div
-							id="mauticform_contactform_first_name"
-							data-validate="first_name"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
-							<label
-								id="mauticform_label_contactform_first_name"
-								for="mauticform_input_contactform_first_name"
-								class="mauticform-label">
-								First Name
-							</label>
-							<input
-								id="mauticform_input_contactform_first_name"
-								name="mauticform[first_name]"
-								value=""
-								class="mauticform-input"
-								type="text"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_last_name"
-							data-validate="last_name"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
-							<label id="mauticform_label_contactform_last_name" for="mauticform_input_contactform_last_name" class="mauticform-label">
-								Last Name
-							</label>
-							<input
-								id="mauticform_input_contactform_last_name"
-								name="mauticform[last_name]"
-								value=""
-								class="mauticform-input"
-								type="text"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_email_address"
-							data-validate="email_address"
-							data-validation-type="email"
-							class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
-							<label
-								id="mauticform_label_contactform_email_address"
-								for="mauticform_input_contactform_email_address"
-								class="mauticform-label">
-								Email address
-							</label>
-							<input
-								id="mauticform_input_contactform_email_address"
-								name="mauticform[email_address]"
-								value=""
-								class="mauticform-input"
-								type="email"
-							/>
-							<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
-						</div>
-
-						<div
-							id="mauticform_contactform_mobile"
-							data-validate="mobile"
-							data-validation-type="text"
-							class="mauticform-row mauticform-text mauticform-field-4 mauticform-required">
-							<label id="mauticform_label_contactform_mobile" for="mauticform_input_contactform_mobile" class="mauticform-label">
-								Mobile
-							</label>
-							<input id="mauticform_input_contactform_mobile" name="mauticform[mobile]" value="" class="mauticform-input" type="text" />
-							<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
-						</div>
-
-						<div id="mauticform_contactform_f_message" class="mauticform-row mauticform-text mauticform-field-5">
-							<label id="mauticform_label_contactform_f_message" for="mauticform_input_contactform_f_message" class="mauticform-label">
-								Message
-							</label>
-							<textarea id="mauticform_input_contactform_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
-							<span class="mauticform-errormsg" style="display: none;"></span>
-						</div>
-
-						<div id="mauticform_contactform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
-							<button
-								type="submit"
-								name="mauticform[submit]"
-								id="mauticform_input_contactform_submit"
-								value=""
-								class="mauticform-button btn btn-default">
-								Submit
-							</button>
-						</div>
+					
+				  <div class="mauticform-page-wrapper mauticform-page-1" data-mautic-form-page="1">
+		
+					<div id="mauticform_contactform_first_name" data-validate="first_name" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-1 mauticform-required">
+						<label id="mauticform_label_contactform_first_name" for="mauticform_input_contactform_first_name" class="mauticform-label">First Name</label>
+						<input id="mauticform_input_contactform_first_name" name="mauticform[first_name]" value="" class="mauticform-input" type="text">
+						<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+					</div>
+		
+					<div id="mauticform_contactform_last_name" data-validate="last_name" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-2 mauticform-required">
+						<label id="mauticform_label_contactform_last_name" for="mauticform_input_contactform_last_name" class="mauticform-label">Last Name</label>
+						<input id="mauticform_input_contactform_last_name" name="mauticform[last_name]" value="" class="mauticform-input" type="text">
+						<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+					</div>
+		
+					<div id="mauticform_contactform_email_address" data-validate="email_address" data-validation-type="email" class="mauticform-row mauticform-email mauticform-field-3 mauticform-required">
+						<label id="mauticform_label_contactform_email_address" for="mauticform_input_contactform_email_address" class="mauticform-label">Email address</label>
+						<input id="mauticform_input_contactform_email_address" name="mauticform[email_address]" value="" class="mauticform-input" type="email">
+						<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+					</div>
+		
+					<div id="mauticform_contactform_mobile" data-validate="mobile" data-validation-type="text" class="mauticform-row mauticform-text mauticform-field-4 mauticform-required">
+						<label id="mauticform_label_contactform_mobile" for="mauticform_input_contactform_mobile" class="mauticform-label">Mobile</label>
+						<input id="mauticform_input_contactform_mobile" name="mauticform[mobile]" value="" class="mauticform-input" type="text">
+						<span class="mauticform-errormsg" style="display: none;">Mandotory</span>
+					</div>
+		
+					<div id="mauticform_contactform_f_message" class="mauticform-row mauticform-text mauticform-field-5">
+						<label id="mauticform_label_contactform_f_message" for="mauticform_input_contactform_f_message" class="mauticform-label">Message</label>
+						<textarea id="mauticform_input_contactform_f_message" name="mauticform[f_message]" class="mauticform-textarea"></textarea>
+						<span class="mauticform-errormsg" style="display: none;"></span>
+					</div>
+		
+					<div id="mauticform_contactform_submit" class="mauticform-row mauticform-button-wrapper mauticform-field-6">
+						<button type="submit" name="mauticform[submit]" id="mauticform_input_contactform_submit" value="" class="mauticform-button btn btn-default">Submit</button>
+					</div>
 					</div>
 				</div>
-
-				<input type="hidden" name="mauticform[formId]" id="mauticform_contactform_id" value="1" />
-				<input type="hidden" name="mauticform[return]" id="mauticform_contactform_return" value="" />
-				<input type="hidden" name="mauticform[formName]" id="mauticform_contactform_name" value="contactform" />
-			</form>
+		
+				<input type="hidden" name="mauticform[formId]" id="mauticform_contactform_id" value="1">
+				<input type="hidden" name="mauticform[return]" id="mauticform_contactform_return" value="">
+				<input type="hidden" name="mauticform[formName]" id="mauticform_contactform_name" value="contactform">
+		
+				</form>
 		</div>
-		<script>
-			if (typeof MauticSDKLoaded == "undefined") {
-				var MauticSDKLoaded = true;
-				var head = document.getElementsByTagName("head")[0];
-				var script = document.createElement("script");
-				script.type = "text/javascript";
-				script.src = "http://asset.monolithon.com/media/js/mautic-form.js?vea43f1e4";
-				script.onload = function () {
-					MauticSDK.onLoad();
-				};
-				head.appendChild(script);
-				var MauticDomain = "http://asset.monolithon.com";
-				var MauticLang = {
-					submittingMessage: "Please wait...",
-				};
-			} else if (typeof MauticSDK != "undefined") {
-				MauticSDK.onLoad();
-			}
-		</script>
 	</Container>
 </Layout>
